--- a/app/views/templates/top.html
+++ b/app/views/templates/top.html
@@ -3,10 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Document</title>
+  <link rel="stylesheet" href="/static/css/bootstrap.min.css">
 </head>
 <body>
-  <h1>TOP</h1>
+  <div class="container text-center">
+    <h2>top2</h2>
+    {{.}}
+  </div>
+  <script src="/static/js/bootstrap.bundle.min.js"></script>
+  <script src="/static/js/jquery-3.6.3.min.js"></script>
 </body>
 </html>
